make.txt
g++ -std=c++17 -Wall -Iinclude/Entities -Iinclude/Readers -Iinclude/Exporters -Ivendor -c -o obj/main.o src/main.cpp
In file included from include/Entities/RedatamDatabase.hpp:8,
                 from src/main.cpp:3:
include/Readers/FuzzyEntityParser.hpp:16:5: error: ‘RedatamDatabase’ does not name a type
   16 |     RedatamDatabase* db;
      |     ^~~~~~~~~~~~~~~
In file included from include/Entities/RedatamDatabase.hpp:8,
                 from src/main.cpp:3:
include/Readers/FuzzyEntityParser.hpp:100:38: error: expected ‘)’ before ‘*’ token
  100 |     FuzzyEntityParser(RedatamDatabase* db) : db(db) {}
      |                      ~               ^
      |                                      )
include/Readers/FuzzyEntityParser.hpp: In member function ‘void RedatamLib::FuzzyEntityParser::ParseEntities(const string&)’:
include/Readers/FuzzyEntityParser.hpp:114:9: error: ‘db’ was not declared in this scope
  114 |         db->entityNames = GetBest(candidates);
      |         ^~
In file included from /usr/include/x86_64-linux-gnu/c++/11/bits/c++allocator.h:33,
                 from /usr/include/c++/11/bits/allocator.h:46,
                 from /usr/include/c++/11/string:41,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from src/main.cpp:1:
/usr/include/c++/11/ext/new_allocator.h: In instantiation of ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = RedatamLib::Variable; _Args = {std::shared_ptr<RedatamLib::Entity>&}; _Tp = RedatamLib::Variable]’:
/usr/include/c++/11/bits/alloc_traits.h:516:17:   required from ‘static void std::allocator_traits<std::allocator<_CharT> >::construct(std::allocator_traits<std::allocator<_CharT> >::allocator_type&, _Up*, _Args&& ...) [with _Up = RedatamLib::Variable; _Args = {std::shared_ptr<RedatamLib::Entity>&}; _Tp = RedatamLib::Variable; std::allocator_traits<std::allocator<_CharT> >::allocator_type = std::allocator<RedatamLib::Variable>]’
/usr/include/c++/11/bits/shared_ptr_base.h:519:39:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {std::shared_ptr<RedatamLib::Entity>&}; _Tp = RedatamLib::Variable; _Alloc = std::allocator<RedatamLib::Variable>; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/11/bits/shared_ptr_base.h:650:16:   required from ‘std::__shared_count<_Lp>::__shared_count(_Tp*&, std::_Sp_alloc_shared_tag<_Alloc>, _Args&& ...) [with _Tp = RedatamLib::Variable; _Alloc = std::allocator<RedatamLib::Variable>; _Args = {std::shared_ptr<RedatamLib::Entity>&}; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/11/bits/shared_ptr_base.h:1342:14:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<RedatamLib::Variable>; _Args = {std::shared_ptr<RedatamLib::Entity>&}; _Tp = RedatamLib::Variable; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/11/bits/shared_ptr.h:409:59:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<RedatamLib::Variable>; _Args = {std::shared_ptr<RedatamLib::Entity>&}; _Tp = RedatamLib::Variable]’
/usr/include/c++/11/bits/shared_ptr.h:862:14:   required from ‘std::shared_ptr<_Tp> std::allocate_shared(const _Alloc&, _Args&& ...) [with _Tp = RedatamLib::Variable; _Alloc = std::allocator<RedatamLib::Variable>; _Args = {std::shared_ptr<RedatamLib::Entity>&}]’
/usr/include/c++/11/bits/shared_ptr.h:878:39:   required from ‘std::shared_ptr<_Tp> std::make_shared(_Args&& ...) [with _Tp = RedatamLib::Variable; _Args = {std::shared_ptr<RedatamLib::Entity>&}]’
include/Readers/XmlEntityParser.hpp:100:42:   required from here
/usr/include/c++/11/ext/new_allocator.h:162:11: error: call of overloaded ‘Variable(std::shared_ptr<RedatamLib::Entity>&)’ is ambiguous
  162 |         { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from include/Entities/Entity.hpp:7,
                 from include/Entities/RedatamDatabase.hpp:7,
                 from src/main.cpp:3:
include/Entities/Variable.hpp:99:5: note: candidate: ‘RedatamLib::Variable::Variable(std::shared_ptr<RedatamLib::Entity>)’
   99 |     Variable(std::shared_ptr<Entity> parent) : parentEntity(parent) {}
      |     ^~~~~~~~
include/Entities/Variable.hpp:47:14: note: candidate: ‘RedatamLib::Variable::Variable(const std::shared_ptr<RedatamLib::Entity>&)’
   47 |     explicit Variable(const std::shared_ptr<Entity>& entity)
      |              ^~~~~~~~
include/Entities/Variable.hpp:20:7: note: candidate: ‘RedatamLib::Variable::Variable(const RedatamLib::Variable&)’ (deleted)
   20 | class Variable {
      |       ^~~~~~~~
make: *** [Makefile:16: obj/main.o] Error 1
